enum TaskStatus {
    PENDING,
    IN_PROGRESS,
    COMPLETED,
    ABANDONED
}
