@startuml ClassDiagram_Partie1

enum TaskStatus <<enumeration>> #C0DD97 {
    PENDING
    IN_PROGRESS
    COMPLETED
    ABANDONED
}

enum Priority <<enumeration>> #C0DD97 {
    LOW
    MEDIUM
    HIGH
}

interface Task <<interface>> #CECBF6 {
    __Methodes__
    + editName(name : String) : void
    + editDescription(desc : String) : void
    + editDueDate(date : Date) : void
    + markCompleted() : void
    + markInProgress() : void
    + markAbandoned() : void
    + markPending() : void
    + getStatus() : TaskStatus
    + setPriority(p : Priority) : void
    + getPriority() : Priority
    + addComment(content : String) : void
    + getComments() : void
    + getId() : UUID
    + getName() : String
    + getDescription() : String
    + getDueDate() : Date
}

class TaskImpl #B5D4F4 {
    __Attributs__
    - id : UUID
    - name : String
    - description : String
    - dueDate : Date
    - status : TaskStatus
    - priority : Priority
    __Constructeur__
    + TaskImpl(name : String, description : String, dueDate : Date)
    __Methodes__
    + editName(name : String) : void
    + editDescription(desc : String) : void
    + editDueDate(date : Date) : void
    + markCompleted() : void
    + markInProgress() : void
    + markAbandoned() : void
    + markPending() : void
    + getStatus() : TaskStatus
    + setPriority(p : Priority) : void
    + getPriority() : Priority
    + addComment(content : String) : void
    + getComments() : void
    + getId() : UUID
    + getName() : String
    + getDescription() : String
    + getDueDate() : Date
}

class Comment #B5D4F4 {
    __Attributs__
    - id : UUID
    - content : String
    - createdAt : Date
    __Constructeur__
    + Comment(content : String)
    __Methodes__
    + getContent() : String
    + getCreatedAt() : Date
    + getId() : UUID
}

class InputValidator #B5D4F4 {
    __Attributs__
    - {static} MAX_NAME_LEN : int = 100
    - {static} MAX_DESC_LEN : int = 500
    __Methodes__
    + validateName(name : String) : String
    + validateDescription(desc : String) : String
    + validateDueDate(date : Date) : Date
}

abstract class TaskList #F4C0D1 {
    __Methodes__
    + {abstract} add(t : Task) : void
    + {abstract} remove(id : UUID) : void
    + {abstract} update(t : Task) : void
    + {abstract} getAll() : void
    + {abstract} findById(id : UUID) : Task
    + {abstract} search(keyword : String) : void
}

class TaskListImpl #B5D4F4 {
    __Attributs__
    - validator : InputValidator
    __Constructeur__
    + TaskListImpl()
    __Methodes__
    + filterByStatus(status : TaskStatus) : void
    + filterByPriority(priority : Priority) : void
    + sortByDueDate() : void
    + sortByPriority() : void
    + exportToJSON(filePath : String) : void
    + importFromJSON(filePath : String) : void
}

class TaskManagerGUI #B5D4F4 {
    __Attributs__
    - mainFrame : JFrame
    - taskTable : JTable
    __Constructeur__
    + TaskManagerGUI(taskList : TaskListImpl)
    __Methodes__
    + refreshView() : void
    + showCreateDialog() : void
    + showEditDialog(t : Task) : void
    + showDeleteConfirm(id : UUID) : void
    + applyFilter(status : TaskStatus) : void
    + applySort(criterion : String) : void
    + showSearchResults(keyword : String) : void
}


Task <|.. TaskImpl

TaskList <|-- TaskListImpl

TaskImpl "1" *-- "0..*" Comment : contains 

TaskList "1" *-- "0..*" Task : manages 

TaskListImpl ..> InputValidator : uses 

TaskManagerGUI ..> TaskListImpl : delegates 

@enduml
